fix image alignment for profile index item. Add location to users table

--- a/app/assets/stylesheets/components/user/profile/profile_index.scss
+++ b/app/assets/stylesheets/components/user/profile/profile_index.scss
@@ -14,6 +14,7 @@
 .profile_index-item {
     display: flex; 
     flex-direction: row; 
+    align-items: center; 
     width: 25vw; 
     margin: 0.5rem; 
     padding: 0.5rem; 
